--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 * {
+  scroll-behavior: smooth;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Libre Caslon Text', serif;
+  font-family: 'Caslon Antique';
 }
 
 body {
