--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 * {
-  scroll-behavior: smooth;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Caslon Antique';
+  font-family: 'montserrat', sans-serif;
 }
 
 body {
@@ -15,9 +14,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: black;
+  background: #1f1a17;
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #D4A24E;
+  background: #f5bd30;
 }
+
+
