Muokattu ja lisätty kuvia

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: #F5BD30;
+  border-radius: 0.5rem;
 }
 
 canvas {
