--- a/src/App.css
+++ b/src/App.css
@@ -27,4 +27,35 @@ canvas {
   touch-action: none;
 }
 
+.slide {
+  opacity: 0;
+  transition-duration: 0.5s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 0.5s;
+  transform: scale(1.08);
+}
+
+.content {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 9rem;
+  left: 7rem;
+  width: 55%;
+  padding: 3rem;
+  z-index: 10;
+}
+
+.content > * {
+  color: gold;
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-shadow: 3px 3px 0.3rem #000;
+}
 
